<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/ggcintercom_background"
    tools:context="com.example.ljean.ggcintercom.MainActivity">

    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/webview1"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp"/>
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:maxLines="1"
            android:layout_marginBottom="20dp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:background="@color/green"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:onClick="Predash"/>

    <TextView
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_not_member_yet"
        android:textColor="@color/white"
        android:onClick="Sign_up"
        android:clickable="true"/>

            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="166dp"
                android:text="@string/theAsh"
                android:textStyle="bold"
                android:textSize="200sp"
                android:textColor="@color/Overlaygreen"
                android:layout_marginBottom="20dp"
                android:layout_gravity="end" />


            <Button
                android:id="@+id/btn_d2l"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/d2l"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:layout_marginBottom="10dp"
                android:onClick="Browsed2l"/>
            <Button
                android:id="@+id/banner"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/banner"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:layout_marginBottom="10dp"
                android:onClick="Browsebanner"/>
            <Button
                android:id="@+id/clawmail"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/clawmail"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:layout_marginBottom="10dp"
                android:onClick="Browseclawmail"/>
            <Button
                android:id="@+id/getinvolved"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/getinvolved"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:layout_marginBottom="10dp"
                android:onClick="BrowseGetInv"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
