<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/ggcintercom_background"
    tools:context="com.example.ljean.ggcintercom.Sign_up">
    <EditText
        android:id="@+id/edit_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/First_n"
        android:textColorHint="@color/white">

    </EditText>

    <EditText
        android:id="@+id/edit_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Last_n"
        android:textColorHint="@color/white">

    </EditText>

    <EditText
        android:id="@+id/edit_middle_I"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Middle_I"
        android:textColorHint="@color/white">

    </EditText>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner_functions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

    </Spinner>
    <Spinner
        android:id="@+id/spinner_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

    </Spinner>

    <Spinner
        android:id="@+id/spinner_majors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

    </Spinner>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up_Btn"
        android:background="@color/green"
        android:textColor="@color/white">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="166dp"
        android:text="@string/theAsh"
        android:textStyle="bold"
        android:textSize="200sp"
        android:textColor="@color/Overlaygreen"
        android:layout_marginBottom="20dp"
        android:layout_gravity="end" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
