<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/Overlayblue"
    tools:context="com.example.ljean.ggcintercom.Feedback">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textv_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textSize="30dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edit_txt"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/def_message"
                android:background="@color/Overlaygreen"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sendmessage"
                android:textColor="@color/white"
                android:background="@color/green"
                android:onClick="SendingMessage"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="166dp"
                android:text="@string/theAsh"
                android:textStyle="bold"
                android:textSize="200sp"
                android:textColor="@color/Overlaygreen"
                android:layout_marginBottom="20dp"
                android:layout_gravity="end" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
