<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ggcintercom_background2"
    tools:context="com.example.ljean.ggcintercom.Splash">

    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@mipmap/ic_launcher"
        android:layout_marginTop="101dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/txtv_ash2"
        android:layout_width="wrap_content"
        android:layout_height="166dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="45sp"
        android:textColor="@color/Overlaygreen"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:id="@+id/txtv_ash"
        android:layout_width="wrap_content"
        android:layout_height="166dp"
        android:text="@string/theAsh"
        android:textStyle="bold"
        android:textSize="200sp"
        android:textColor="@color/Overlaygreen"
        android:layout_gravity="end"
        android:layout_below="@+id/imageIcon"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/green"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
